Fixed z-index for header drop-down menu

--- a/src/AlgoVisual/Layout/Header/Header.css
+++ b/src/AlgoVisual/Layout/Header/Header.css
@@ -79,6 +79,7 @@
     display: none;
     animation: growDown 350ms ease-in-out forwards;
     transform-origin: top center;
+    z-index: 1;
 }
 
 #dropdown ul li {
